--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "fair-esm>=2.0.0",
     "lightning[extra]>=2.5.0.post0",
     "pinder[all]>=0.4.1",
+    "esm>=3.1.3",
+    "botorch>=0.13.0",
 ]
 [[tool.uv.index]]
 name = "pytorch-cu118"
